--- a/src/modules/chat/components/dialog/styles/index.module.scss
+++ b/src/modules/chat/components/dialog/styles/index.module.scss
@@ -41,9 +41,7 @@
   }
 
   .messages {
-    display: grid;
-    grid-template-rows: repeat(auto-fit, minmax(0, max-content));
-    max-height: max-content;
+    overflow-y: auto;
   }
 
   .message {
